src/main/resources/tests/Semantics/bad/whileLoop1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestLoops is
   variable2 : character;
begin
   -- Test while loop with errors
   while variable2 loop -- Error: variable2 is not a boolean
      put(variable2);
   end loop;
end TestLoops;
